<resources>
    <string name="app_name">Morsel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="morsel_app_name">Morsel</string>
    <string name="morsel_hint_username">Username</string>
    <string name="morsel_hint_password">Password</string>
    <string name="shr_button_next">Next</string>
    <string name="shr_button_cancel">Cancel</string>
    <string name="morsel_error_password">Please enter a valid password</string>
    <string name="morsel_logo_description">Morsel Logo</string>
    <string name="morsel_hint_email">Email</string>
    <string name="morsel_hint_phone">Phone Number</string>
    <string name="morsel_hint_address">Address</string>
    <string name="morsel_hint_loc_name">Name</string>
    <string name="morsel_hint_loc_addr">Address</string>
    <string name="morsel_hint_loc_num">Number of Residents</string>
    <string name="morsel_button_add">Add</string>
    <string name="morsel_button_cancel">Cancel</string>


    <string name="job_success">Effective Contribution</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="api_key">AIzaSyAghNbJCrl0OhLPLh9vnFRjT7OpEwfh6lg</string>
    <string name="ratings">Bonus Points</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
    <string name="title_activity_maps">Map</string>
</resources>