<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:layout_gravity="center_horizontal|center_vertical"
    android:layout_margin="10dp"
    android:elevation="10dp"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="top|center_horizontal"
            android:src="@drawable/morsel_logo"
            android:contentDescription="@string/morsel_logo_description"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:id="@+id/tv_r_username"
            style="@style/Widget.Morsel.TextInputLayout"
            android:hint="@string/morsel_hint_username">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/et_r_username"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:id="@+id/tv_r_email"
            style="@style/Widget.Morsel.TextInputLayout"
            android:hint="@string/morsel_hint_email">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:id="@+id/et_r_email"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:id="@+id/tv_r_phoneno"
            style="@style/Widget.Morsel.TextInputLayout"
            android:hint="@string/morsel_hint_phone">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:id="@+id/et_r_phoneno"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:id="@+id/tv_r_area"
            style="@style/Widget.Morsel.TextInputLayout"
            android:hint="Area">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/et_r_area"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:id="@+id/tv_r_city"
            style="@style/Widget.Morsel.TextInputLayout"
            android:hint="City">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/et_r_city"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            style="@style/Widget.Morsel.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:hint="@string/morsel_hint_password"
            app:errorEnabled="true"
            android:id="@+id/tv_r_password"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:id="@+id/et_r_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout    android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                style="@style/Widget.Morsel.Button.TextButton"
                android:text="@string/shr_button_next"/>


            <TextView
                android:id="@+id/tv_r_login_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="right"
                android:onClick="onClickLogin"
                android:layout_below="@+id/register_button"
                android:text="Already Registered?"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>