<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddHotspotActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="top|center_horizontal"
                android:src="@drawable/morsel_logo"
                android:contentDescription="@string/morsel_logo_description"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="4dp"
                android:id="@+id/add_hotspot_name"
                style="@style/Widget.Morsel.TextInputLayout"
                android:hint="@string/morsel_hint_loc_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_hotspot_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                style="@style/Widget.Morsel.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_margin="4dp"
                android:hint="@string/morsel_hint_loc_num"
                app:errorEnabled="true"
                android:id="@+id/add_hotspot_num"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_hotspot_num_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="300dp"
                android:layout_margin="4dp"
                android:id="@+id/add_hotspot_addr"
                style="@style/Widget.Morsel.TextInputLayout"
                android:hint="Address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_hotspot_addr_edit_text"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <ImageButton
                style="@style/Widget.Morsel.Button"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_toRightOf="@id/add_hotspot_addr"
                android:src="@drawable/ic_baseline_add_location_24"
                android:id="@+id/addr_btn"
                />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_hotspot"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    style="@style/Widget.Morsel.Button.TextButton"
                    android:onClick="addHotspot"
                    android:text="@string/morsel_button_add"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_add_hotspot"
                    style="@style/Widget.Morsel.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:onClick="cancelButton"
                    android:text="@string/morsel_button_cancel"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>